--- a/main.css
+++ b/main.css
@@ -14,8 +14,9 @@ header{
     left: 0;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    background: #23252b;
     box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
     padding: 0 100px;
     transition: 0.6s;
@@ -41,4 +42,12 @@ header .navigation .menu{
     justify-content: center;
     list-style: none;
     user-select: none;
+}
+
+.menu-item > a{
+    color: #fff;
+    font-size: 1em;
+    text-decoration: none;
+    margin: 20px;
+    padding: 25px 0;
 }
