--- a/main.css
+++ b/main.css
@@ -65,6 +65,15 @@ header .navigation .menu{
     list-style: none;
     border-radius: 0 0 8px 8px;
     box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
+    pointer-events: none;
+    transform: translateY(20px);
+    opacity: 0;
+}
+
+.menu-item:hover .sub-menu{
+    pointer-events: all;
+    transform: translateY(0px);
+    opacity: 1;
 }
 
 .menu-item .sub-menu .sub-item{
