--- a/main.css
+++ b/main.css
@@ -111,7 +111,7 @@ header .navigation .menu{
     overflow: hidden;
     pointer-events: none;
     transform: translateY(20px);
-    opacity: 0;
+    opacity: 1;
     transition: 0.3s;
     transition-property: transform, opacity;
 }
@@ -120,4 +120,14 @@ header .navigation .menu{
     pointer-events: all;
     transform: translateY(0px);
     opacity: 1;
+}
+
+.more .more-menu .more-item{
+    padding: 7px 0;
+    box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);
+    transition: 0.3s;
+}
+
+.more .more-menu .more-item:hover{
+    background: #4080ef;
 }
