--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ header{
 }
 
 header .logo{
-    color: #fff;
+    color: rgb(4, 145, 4);
     font-size: 1.8em;
     font-weight: 700;
     text-transform: uppercase;
@@ -45,7 +45,7 @@ header .navigation .menu{
 }
 
 .menu-item > a{
-    color: #fff;
+    color: rgb(4, 145, 4);
     font-size: 1em;
     text-decoration: none;
     margin: 20px;
@@ -86,14 +86,14 @@ header .navigation .menu{
 }
 
 .menu-item .sub-menu .sub-item a{
-    color: #fff;
+    color: rgb(4, 145, 4);
     font-size: 1em;
     text-decoration: none;
     padding: 15px 30px;
 }
 
 .menu-item .sub-menu .sub-item:hover{
-    background: #4080ef;
+    background: #40ccef;
 }
 
 .menu-item .sub-menu .sub-item:last-child:hover{
@@ -129,5 +129,5 @@ header .navigation .menu{
 }
 
 .more .more-menu .more-item:hover{
-    background: #4080ef;
+    background: #40ccef;
 }
