--- a/main.css
+++ b/main.css
@@ -144,4 +144,22 @@ header .navigation .menu{
         padding: 90px 50px;
         overflow-y: auto;
     }
+
+    .menu-item{
+        position: relative;
+    }
+
+    .menu-item .sub-menu{
+        opacity: 1;
+        position: relative;
+        top: 0;
+        transform: translateX(10px);
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 5px;
+        overflow: hidden;
+    }
+
+    .menu-item:hover .sub-menu{
+        transform: translateX(10px);
+    }
 }
