update sub-menu-item color
july 31, 2022

--- a/main.css
+++ b/main.css
@@ -172,6 +172,6 @@ header .navigation .menu{
     }
     
     .menu-item .sub-menu .sub-item a:hover{
-        color: #4080ef;
+        color: #23f335;
     }
 }
