border-radius on submenu item
july 31, 2022

--- a/main.css
+++ b/main.css
@@ -180,6 +180,9 @@ header .navigation .menu{
         opacity: 1s;
         position: relative;
         left: 0;
+        transform: translateY(0);
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 5px;
     }
 
 }
