--- a/main.css
+++ b/main.css
@@ -180,13 +180,15 @@ header .navigation .menu{
         opacity: 1s;
         position: relative;
         left: 0;
-        transform: translateY(0);
+        /*transform: translateY(0);
         background: rgba(255, 255, 255, 0.1);
-        border-radius: 5px;
+        border-radius: 5px;*/
     }
 
     /*.more .more-menu .menu-item{
         box-shadow: none;
     }*/
+
+    
 
 }
