--- a/main.css
+++ b/main.css
@@ -7,6 +7,10 @@
     font-family: "Poppins", sans-serif;
 }
 
+/************
+#   HEADER. #
+************/
+
 header{
     z-index: 999;
     position: fixed;
@@ -22,6 +26,7 @@ header{
     transition: 0.6s;
 }
 
+/* --- logo --- */
 header .logo{
     color: #fff;
     font-size: 1.8em;
@@ -31,11 +36,13 @@ header .logo{
     letter-spacing: 2px;
 }
 
+/* --- navigation --- */
 header .navigation{
     position: relative;
     line-height: 75px;
 }
 
+/* --- menu --- */
 header .navigation .menu{
     position: relative;
     display: flex;
@@ -43,6 +50,10 @@ header .navigation .menu{
     list-style: none;
     user-select: none;
 }
+
+/******************
+#   MENU ITEMS.   #
+*******************/
 
 .menu-item > a{
     color: #fff;
@@ -53,7 +64,7 @@ header .navigation .menu{
 }
 
 .menu-item > a:hover{
-    color: #469dff;
+    color: #697f85;
     transition: 0.3s;
 }
 
@@ -82,7 +93,7 @@ header .navigation .menu{
     position: relative;
     padding: 7px 0;
     cursor: pointer;
-    box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);
+    /*box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);*/
 }
 
 .menu-item .sub-menu .sub-item a{
@@ -93,7 +104,7 @@ header .navigation .menu{
 }
 
 .menu-item .sub-menu .sub-item:hover{
-    background: #40ccef;
+    background: #697f85;
 }
 
 .menu-item .sub-menu .sub-item:last-child:hover{
@@ -124,7 +135,7 @@ header .navigation .menu{
 
 .more .more-menu .more-item{
     padding: 7px 0;
-    box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);
+    /*box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);*/
     transition: 0.3s;
 }
 
@@ -163,6 +174,7 @@ header .navigation .menu{
         transform: translateX(10px);
     }
 
+    /* --- items sub-menus --- */
     .menu-item .sub-menu  .sub-item{
         box-shadow: none;
     }
@@ -188,7 +200,5 @@ header .navigation .menu{
     /*.more .more-menu .menu-item{
         box-shadow: none;
     }*/
-
-    
 
 }
