--- a/main.css
+++ b/main.css
@@ -1,204 +1,208 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:100;200;400;500');
+@import url("https://fonts.googleapis.com/css?family=Poppins:100;200;400;500");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 /************
 #   HEADER. #
 ************/
 
-header{
-    z-index: 999;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #23252b;
-    box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
-    padding: 0 100px;
-    transition: 0.6s;
+header {
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #23252b;
+  box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
+  padding: 0 100px;
+  transition: 0.6s;
 }
 
 /* --- logo --- */
-header .logo{
-    color: #fff;
-    font-size: 1.8em;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 2px;
+header .logo {
+  color: #fff;
+  font-size: 1.8em;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 2px;
 }
 
 /* --- navigation --- */
-header .navigation{
-    position: relative;
-    line-height: 75px;
+header .navigation {
+  position: relative;
+  line-height: 75px;
 }
 
 /* --- menu --- */
-header .navigation .menu{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    user-select: none;
+header .navigation .menu {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  user-select: none;
 }
 
 /******************
 #   MENU ITEMS.   #
 *******************/
 
-.menu-item > a{
-    color: #fff;
-    font-size: 1em;
-    text-decoration: none;
-    margin: 20px;
-    padding: 25px 0;
+/* --- links --- */
+.menu-item > a {
+  color: #fff;
+  font-size: 1em;
+  text-decoration: none;
+  margin: 20px;
+  padding: 25px 0;
 }
 
-.menu-item > a:hover{
-    color: #697f85;
-    transition: 0.3s;
+.menu-item > a:hover {
+  color: #38f531;
+  transition: 0.3s;
 }
 
-.menu-item .sub-menu{
-    position: absolute;
+.menu-item .sub-menu {
+  position: absolute;
+  background: #23252b;
+  top: 74px;
+  line-height: 40px;
+  list-style: none;
+  border-radius: 0 0 8px 8px;
+  box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
+  pointer-events: none;
+  transform: translateY(20px);
+  opacity: 0;
+  transition: 0.3s;
+  transition-property: transform, opacity;
+}
+
+.menu-item:hover .sub-menu {
+  pointer-events: all;
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+.menu-item .sub-menu .sub-item {
+  position: relative;
+  padding: 7px 0;
+  cursor: pointer;
+  /*box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);*/
+}
+
+.menu-item .sub-menu .sub-item a {
+  color: #fff;
+  font-size: 1em;
+  text-decoration: none;
+  padding: 15px 30px;
+}
+
+.menu-item .sub-menu .sub-item a:hover {
+  color: #23f335;
+}
+
+.menu-item .sub-menu .sub-item:hover {
+  background: #697f85;
+}
+
+.menu-item .sub-menu .sub-item:last-child:hover {
+  border-radius: 0 0 8px 8px;
+}
+
+.more .more-menu {
+  position: absolute;
+  background: #23252b;
+  list-style: none;
+  top: 0;
+  left: 100%;
+  white-space: nowrap;
+  border-radius: 0 8px 8px 8px;
+  overflow: hidden;
+  pointer-events: none;
+  transform: translateY(20px);
+  opacity: 1;
+  transition: 0.3s;
+  transition-property: transform, opacity;
+}
+
+.more:hover .more-menu {
+  pointer-events: all;
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+.more .more-menu .more-item {
+  padding: 7px 0;
+  /*box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);*/
+  transition: 0.3s;
+}
+
+.more .more-menu .more-item:hover {
+  background: #38f531;
+}
+
+@media (max-width: 1060px) {
+  header .navigation .menu {
+    position: fixed;
+    display: block;
     background: #23252b;
-    top: 74px;
-    line-height: 40px;
-    list-style: none;
-    border-radius: 0 0 8px 8px;
-    box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
-    pointer-events: none;
-    transform: translateY(20px);
-    opacity: 0;
-    transition: 0.3s;
-    transition-property: transform, opacity;
-}
-
-.menu-item:hover .sub-menu{
-    pointer-events: all;
-    transform: translateY(0px);
-    opacity: 1;
-}
-
-.menu-item .sub-menu .sub-item{
-    position: relative;
-    padding: 7px 0;
-    cursor: pointer;
-    /*box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);*/
-}
-
-.menu-item .sub-menu .sub-item a{
-    color: #fff;
-    font-size: 1em;
-    text-decoration: none;
-    padding: 15px 30px;
-}
-
-.menu-item .sub-menu .sub-item:hover{
-    background: #697f85;
-}
-
-.menu-item .sub-menu .sub-item:last-child:hover{
-    border-radius:0 0 8px 8px;
-}
-
-.more .more-menu{
-    position: absolute;
-    background: #23252b;
-    list-style: none;
+    min-width: 350px;
+    height: 100vh;
     top: 0;
-    left: 100%;
-    white-space: nowrap;
-    border-radius: 0 8px 8px 8px;
+    right: 0;
+    padding: 90px 50px;
+    overflow-y: auto;
+  }
+
+  .menu-item {
+    position: relative;
+  }
+
+  .menu-item .sub-menu {
+    opacity: 1;
+    position: relative;
+    top: 0;
+    transform: translateX(10px);
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
     overflow: hidden;
-    pointer-events: none;
-    transform: translateY(20px);
-    opacity: 1;
-    transition: 0.3s;
-    transition-property: transform, opacity;
-}
+  }
 
-.more:hover .more-menu{
-    pointer-events: all;
-    transform: translateY(0px);
-    opacity: 1;
-}
+  .menu-item:hover .sub-menu {
+    transform: translateX(10px);
+  }
 
-.more .more-menu .more-item{
-    padding: 7px 0;
-    /*box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);*/
-    transition: 0.3s;
-}
+  /* --- items sub-menus --- */
+  .menu-item .sub-menu .sub-item {
+    box-shadow: none;
+  }
 
-.more .more-menu .more-item:hover{
-    background: #38f531;
-}
+  .menu-item .sub-menu .sub-item {
+    background: none;
+  }
 
-@media (max-width: 1060px){
-    header .navigation .menu{
-        position: fixed;
-        display: block;
-        background: #23252b;
-        min-width: 350px;
-        height: 100vh;
-        top: 0;
-        right: 0;
-        padding: 90px 50px;
-        overflow-y: auto;
-    }
-
-    .menu-item{
-        position: relative;
-    }
-
-    .menu-item .sub-menu{
-        opacity: 1;
-        position: relative;
-        top: 0;
-        transform: translateX(10px);
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 5px;
-        overflow: hidden;
-    }
-
-    .menu-item:hover .sub-menu{
-        transform: translateX(10px);
-    }
-
-    /* --- items sub-menus --- */
-    .menu-item .sub-menu  .sub-item{
-        box-shadow: none;
-    }
-    
-    .menu-item .sub-menu  .sub-item{
-        background: none;
-    }
-    
-    /*.menu-item .sub-menu .sub-item a:hover{
+  /*.menu-item .sub-menu .sub-item a:hover{
         color: #23f335;
         transition: 0.3s;
     }*/
 
-    .more .more-menu{
-        opacity: 1s;
-        position: relative;
-        left: 0;
-        /*transform: translateY(0);
+  .more .more-menu {
+    opacity: 1s;
+    position: relative;
+    left: 0;
+    /*transform: translateY(0);
         background: rgba(255, 255, 255, 0.1);
         border-radius: 5px;*/
-    }
+  }
 
-    /*.more .more-menu .menu-item{
+  /*.more .more-menu .menu-item{
         box-shadow: none;
     }*/
-
 }
