--- a/main.css
+++ b/main.css
@@ -36,6 +36,10 @@ header .logo {
   letter-spacing: 2px;
 }
 
+header .logo:hover {
+    color: #23f335;
+}
+
 /* --- navigation --- */
 header .navigation {
   position: relative;
