--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ header .logo {
 }
 
 header .logo:hover {
-    color: #23f335;
+  color: #23f335;
 }
 
 /* --- navigation --- */
@@ -56,7 +56,7 @@ header .navigation .menu {
 }
 
 header .navigation .menu:hover {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 /******************
@@ -92,12 +92,6 @@ header .navigation .menu:hover {
   transition-property: transform, opacity;
 }
 
-.menu-item:hover .sub-menu {
-  pointer-events: all;
-  transform: translateY(0px);
-  opacity: 1;
-}
-
 .menu-item .sub-menu .sub-item {
   position: relative;
   padding: 7px 0;
@@ -114,31 +108,36 @@ header .navigation .menu:hover {
 
 .menu-item .sub-menu .sub-item a:hover {
   color: #23f335;
-}
-
-.menu-item .sub-menu .sub-item:hover {
-  /*background: #697f85;*/
-  font-weight: 700;
+  transition: 0.3s;
 }
 
 .menu-item .sub-menu .sub-item:last-child:hover {
   border-radius: 0 0 8px 8px;
 }
 
-.more .more-menu {
+/*.more .more-menu {
+  opacity: 1s;
   position: absolute;
+  left: 100%;
+  transform: translateY(0);
   background: #23252b;
+  border-radius: 0 8px 8px 8px;
   list-style: none;
   top: 0;
-  left: 100%;
   white-space: nowrap;
-  border-radius: 0 8px 8px 8px;
-  overflow: hidden;
-  pointer-events: none;
-  transform: translateY(20px);
-  opacity: 1;
   transition: 0.3s;
   transition-property: transform, opacity;
+}*/
+
+.more .more-menu {
+  position: relative;
+  left: 0;
+  border-radius: 5px;
+  overflow: hidden;
+  pointer-events: none;
+  transform: translateY(0px);
+  background: rgba(255, 255, 255, 0.1);
+  opacity: 1;
 }
 
 .more:hover .more-menu {
@@ -148,13 +147,15 @@ header .navigation .menu:hover {
 }
 
 .more .more-menu .more-item {
-  padding: 7px 0;
-  /*box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);*/
-  transition: 0.3s;
+  /*padding: 7px 0;
+  box-shadow: inset 0px -30px 5px rgba(255, 255, 255, 0.2);
+  transition: 0.3s;*/
+  box-shadow: none;
 }
 
 .more .more-menu .more-item:hover {
-  background: #38f531;
+  /*background: #38f531;*/
+  background: none;
 }
 
 @media (max-width: 1060px) {
@@ -184,34 +185,34 @@ header .navigation .menu:hover {
     overflow: hidden;
   }
 
+  /*.menu-item:hover .sub-menu {
+    transform: translateX(0px);
+  }*/
+
   .menu-item:hover .sub-menu {
-    transform: translateX(10px);
+    pointer-events: all;
+    /*transform: translateY(10px);*/
+    transform: translateY(0px);
+    opacity: 1;
   }
 
   /* --- items sub-menus --- */
   .menu-item .sub-menu .sub-item {
     box-shadow: none;
   }
-
-  .menu-item .sub-menu .sub-item {
+  .menu-item .sub-menu .sub-item:hover {
     background: none;
   }
+  /*.menu-item .sub-menu .sub-item:hover {
+    background: #697f85;
+    font-weight: 700;
+  }*/
 
-  /*.menu-item .sub-menu .sub-item a:hover{
-        color: #23f335;
-        transition: 0.3s;
-    }*/
-
-  .more .more-menu {
-    opacity: 1s;
-    position: relative;
-    left: 0;
-    /*transform: translateY(0);
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 5px;*/
-  }
+  /*.menu-item .sub-menu .sub-item {
+    background: none;
+  }*/
 
   /*.more .more-menu .menu-item{
         box-shadow: none;
-    }*/
+  }*/
 }
